@@ -1,5 +1,11 @@
 2007-10-16  Tambet Ingo  <tambet@gmail.com>
 
+	* src/gconf-helpers/gconf-helpers.c (nm_gconf_read_connection): Don't pick
+	connection settings by name from gconf, get everything and use an anonymous
+	setting creator.
+
+2007-10-16  Tambet Ingo  <tambet@gmail.com>
+
 	* src/applet.c (get_security_for_ap): Wireless security protocol is a GSList
 	of strings, not a string.
 
